Adding content to the landing page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,88 @@
     <title>LINX CHALLENGE</title>
   </head>
   <body>
-    <div id="productsDisplay"></div>
-    <button id="loadMoreButton">Load more products here</button>
+    <header>
+      <h1>
+        <span>uma seleção de produtos</span><span>especial para você</span>
+      </h1>
+      <p>
+        Todos os produtos desta lista foram selecionados a partir da sua
+        navegação. Aproveite!
+      </p>
+
+      <nav>
+        <div>
+          <a href="#">Conheça a Linx</a>
+          <a href="#">Ajude o algorítimo</a>
+        </div>
+        <div>
+          <a href="#">Seus produtos</a>
+          <a href="#">Compartilhe</a>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <article>
+          <h2>Ajude o algorítimo a ser mais certeiro</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Pellentesque ultricies tellus nec mi porta convallis sollicitudin eu
+            urna. Mauris rhoncus erat sed interdum dignissim. Suspendisse semper
+            pretium consectetur. Praesent bibendum arcu risus, sit amet iaculis
+            ex tempus quis. Cras et erat ut tellus vulputate tincidunt. Aenean
+            lacinia euismod augue vel egestas. Class aptent taciti sociosqu ad
+            litora torquent per conubia nostra, per inceptos himenaeos.
+            Vestibulum vel urna tortor. Vivamus et arcu non felis tristique
+            eleifend.
+          </p>
+          <p>
+            Morbi eu condimentum urna. Curabitur eu magna eget turpis
+            condimentum ultrices. Suspendisse quis lorem ultricies, pulvinar
+            purus sed, egestas erat. Etiam ultricies a ante vehicula pharetra.
+            Quisque ut neque mattis, consequat velit ut, ultrices orci. Nulla
+            varius elementum erat vel pharetra. Aenean sit amet nisi diam. Morbi
+            viverra, magna ac luctus commodo, odio ante suscipit libero, at
+            mattis augue est vel metus.
+          </p>
+        </article>
+
+        <form></form>
+      </section>
+
+      <section>
+        <header>
+          <hr />
+          <h2>Sua seleção especial</h2>
+          <hr />
+        </header>
+        <div id="productsDisplay"></div>
+        <button id="loadMoreButton">Load more products here</button>
+      </section>
+
+      <section>
+        <header>
+          <hr />
+          <h2>Compartilhe a novidade</h2>
+          <hr />
+        </header>
+
+        <p>
+          Quer que seus amigos também ganhem a lista personalizada deles?
+          Preencha agora!
+        </p>
+
+        <form></form>
+      </section>
+    </main>
+
+    <footer>
+      <p>Testando suas habilidades em HTML, CSS e JS.</p>
+      <p>Linx Impulse</p>
+      <p>2019</p>
+    </footer>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
