Styling product card

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
           <hr />
         </div>
         <div id="productsDisplay"></div>
-        <button id="loadMoreButton">Load more products here</button>
+        <button id="loadMoreButton" class="loadMoreButton">
+          Load more products here
+        </button>
       </section>
 
       <section class="section3">
