Responsive product card

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div id="productsDisplay"></div>
         <button id="loadMoreButton" class="loadMoreButton">
-          Load more products here
+          Ainda mais produtos aqui!
         </button>
       </section>
 
