Diagonal cut on header and footer

--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
 
-    <title>LINX CHALLENGE</title>
+    <title>MITSUHIKO TAKUSHI - LINX CHALLENGE</title>
   </head>
 
   <body>
     <header>
+      <div class="topTriangle"></div>
       <h1>
         <span class="part1">uma seleção de produtos</span>
-        <span class="part2">especial para você</span>
+        <span class="part2">especial para o Mitsu</span>
         <span class="part3">
           Todos os produtos desta lista foram selecionados a partir da sua
           navegação. Aproveite!
@@ -35,7 +36,7 @@
     <main>
       <section class="section1">
         <article class="firstArticle">
-          <h2>Ajude o algorítimo a ser mais certeiro</h2>
+          <h2>Ajude o algorítimo a ser mais certeiro para o Mitsu</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Pellentesque ultricies tellus nec mi porta convallis sollicitudin eu
@@ -135,8 +136,9 @@
     </main>
 
     <footer>
+      <div class="bottomTriangle"></div>
       <p>Testando suas habilidades em HTML, CSS e JS.</p>
-      <p>Linx Impulse</p>
+      <p>Linx Impulse - Mitsuhiko</p>
       <p>2019</p>
     </footer>
 
